[gd_scene load_steps=6 format=2]

[ext_resource path="res://Chars/OneGuy/oneguyfoshure.png" type="Texture" id=1]
[ext_resource path="res://Chars/OneGuy/Oneguy.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.62067, 0.377779, 0.76158 )

[node name="OneGuy" type="Area"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.3, 0, 0, 0, -2.11797e-07, -1.95, 0, 1, -2.44381e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.53108, 0 )
shape = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_OneGuy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_OneGuy_area_exited"]
